Bugfix for the navigation on mobile

--- a/app/assets/less/components/_component_navigation.less
+++ b/app/assets/less/components/_component_navigation.less
@@ -345,7 +345,7 @@
   }
   #nav-pages {
     right: auto;
-    left: -240px;
+    left: -240px !important;
   }
   // End overrride
   .global-search-vertical();
